=============
Version 2.3.0
=============

Sep 16, 2005

  * ADDED: rdf_transaction/2 and rdf_monitor/1.

  * MODIFIED: rdf_source/1 also returns sources added using rdf_assert/4,
    i.e. setof(DB, rdf(_,_,_,DB), DBs), member(DB, DBs).

  * FIXED: rdf_update/[4,5]: unlock after type-error in action.


=============
Version 2.2.1
=============

Aug 10, 2005

  * FIXED: Quick Save Format for wide-character atoms.  Saved first
    character as many times as the length of the atom. 

Aug 4, 2005

  * ADDED: document_language(+Lang) option to rdf_save/2.  Suggested
    by Mark van Assem.

Jul 15, 2005

  * ADDED/CLEANUP: new rdf_meta/1 directive to simplify namespace
    pre-processing.

Jul 5, 2005

  * ADDED/FIXED: Proper quoting of Unicode URI values conforming the
    RDF standard.  Jochem Liem.

Jun 29, 2005

  * FIXED: rdf:about instead of about when saving lists.  Jochem Liem.

May 24, 2005

  * ENHANCED: Added core statistics

  * FIXED: force re-hashing while loading files to avoid slowdown.

May 20, 2005

  * ADDED: Allow list of files in rdf_load/[1,2]

May 19, 2005

  * ADDED: rdf_register_ns/3, allow overruling old alias.

Apr 26, 2005

  * FIXED: support UNICODE in rdf_save_db/rdf_load_db.  Fabien
    Todescato.

Apr 19, 2005

  * FIXED: rdf_retractall/[3,4] should always succeed.  Bob Wielinga.

Apr 18, 2005

  * ADDED: rdfs_find/5: allow for unbound property list to search all
    properties.

Apr 1, 2005

  * FIXED: memory leak creating many predicate structures on calls to
    rdf(?,+,?) if the predicate does not exist.  This is used by
    rdf_bnode/1.

Mar 29, 2005

  * FIXED: rdf:dataType --> rdf:datatype

Mar 22, 2005

  * ADDED: rdfs_assert_list/3 (adding DB argument)

Mar 8, 2005

  * FIXED: rdf_unload/1: allow for deleting non-files.

Mar 6, 2005

  * FIXED: Added code to emit XML literal values using library(sgml_write).

Mar 01, 2005

  * FIXED/ADDED: encoding issues.  Now allows writing RDF files using